--- a/CSRelatedWork.tex
+++ b/CSRelatedWork.tex
@@ -1,7 +1,7 @@
 \section{Related Work} \label{sec:relatedwork}
 \preston{Draft text from Lois: In building and testing CrashSimulator, we
   examined a number of previous studies in bug detection, data mining,a nd
-  testing protocols. This section summaries a few earlier initiatives in these areas.
+  testing protocols. This section summaries a few earlier initiatives in these areas.}
 
 \iffalse
 While there is a vast literature on test
