--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -40,7 +40,7 @@ With the prototype in hand,  we set out to answer the following questions:
    \item{[\ref{sec-env-bugs}] Do environmental bugs exist in widely used applications?}
    \item{[\ref{sec-complex}] Can CrashSimulator identify anomalies that require
        complex checkers?}
-   \item{[\ref{sec-not-found}] What types of bugs could not be found using CrashSimulator?}
+   %\item{[\ref{sec-not-found}] What types of bugs could not be found using CrashSimulator?}
    \item{[\ref{sec-sorts-errors}] What sorts of errors does CrashSimulator make?}
    \item{[\ref{sec-perf}] Is CrashSimulator able to execute tests in a performant manner?}
 %   \item{[\ref{sec-response}] What was the response to disclosing bugs found in CrashSimulator?}
